# LUAComputers

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bios.lua  fontTable.txt  main.lua
boot/: 00_gpu.lua  01_event.lua  02_pickle.lua  03_network.lua  04_filesystem.lua
put this beside the executable/: bios.lua  settings.ini  settings.xml
put this into %appdata%/LOVE/LUAComputers-devel/: events.txt  networkLog.txt
put this into %appdata%/LOVE/LUAComputers-devel/fonts/: default.lf  test.lf
put this into %appdata%/LOVE/LUAComputers-devel/libs/: 00_term.lua  01_modem.lua
put this into %appdata%/LOVE/LUAComputers-devel/sys/programs/: shell.lua
put this into %appdata%/LOVE/LUAComputers-master/libs/: 00_term.lua
put this into %appdata%/LUAComputers-dev/libs/: 01_modem.lua
src/: Color.cpp  Color.h  Computer.cpp  Computer.h  ComputerEvent.cpp  ComputerEvent.h  Lua_Computer.cpp  Lua_Computer.h  Lua_Terminal.cpp  Lua_Terminal.h  Lua_Udp_Sender.cpp  Lua_Udp_Sender.h  NetworkAdapterUDP_Receiver.cpp  NetworkAdapterUDP_Receiver.h  NetworkAdapterUDP_Sender.cpp  NetworkAdapterUDP_Sender.h  NetworkMessage.cpp  NetworkMessage.h  Pixel.cpp  Pixel.h  Settings.cpp  Settings.h  Terminal.cpp  Terminal.h  main.cpp
